# material_designer_library_alpha

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: release.yaml  run_and_test.yaml
docs/html/: _add_number_8hpp_source.html  _bool_input_8hpp_source.html  _bool_to_num1_8hpp_source.html  _buffer_8hpp_source.html  _c_l_buffer_8hpp_source.html  _c_l_color_texture_8hpp_source.html  _c_l_color_vec3_8hpp_source.html  _c_l_context_8hpp_source.html  _c_l_device_8hpp_source.html  _c_l_engine_8hpp_source.html  _c_l_float_8hpp_source.html  _c_l_grayscale_texture_8hpp_source.html  _c_l_int_8hpp_source.html  _c_l_kernel_8hpp_source.html  _c_l_number2_8hpp_source.html  _c_l_platform_8hpp_source.html  _c_l_queue_8hpp_source.html  _c_l_texture_8hpp_source.html  _c_l_work_item_8hpp_source.html  _cache_8hpp_source.html  _col1_to_num1_8hpp_source.html  _col3_to_num1_8hpp_source.html  _color_texture_8hpp_source.html  _colorvec1_input_8hpp_source.html  _colorvec3_input_8hpp_source.html  _connection_8hpp_source.html  _core_8hpp.html  _core_8hpp_source.html  _data_cache_8hpp_source.html  _data_function_8hpp_source.html  _data_graph_8hpp_source.html  _data_graph_functions_8hpp_source.html  _data_graph_node_8hpp_source.html  _data_node_8hpp_source.html  _data_primitive_function_8hpp_source.html  _data_primitive_input_8hpp_source.html  _data_primitive_output_8hpp_source.html  _data_primitive_process_8hpp_source.html  _data_ref_8hpp_source.html  _device_8hpp_source.html  (+343 more)
docs/latex/: _add_number_8hpp_source.tex  _bool_input_8hpp_source.tex  _bool_to_num1_8hpp_source.tex  _buffer_8hpp_source.tex  _c_l_buffer_8hpp_source.tex  _c_l_context_8hpp_source.tex  (+329 more)
examples/: CMakeLists.txt
examples/getinfo/: main.cpp
matd_v8/: CMakeLists.txt
matd_v8/src/cpp/: KernelCompilerAsync.cpp  KernelCompilerAsync.hpp  MatdV8.cpp  MatdV8.hpp  UpdaterAsync.cpp  UpdaterAsync.hpp  main.cpp
matd_v8/src/ts/: index.ts
matd_v8/src/ts/interfaces/: DeviceInfo.ts  MatdV8.ts
matd_v8/src/ts/lib/: index.ts
src/: CMakeLists.txt
src/core/: ContextManager.cpp  ContextManager.hpp  Core.cpp  Core.hpp  EngineManager.cpp  EngineManager.hpp  JSONParser.cpp  JSONParser.hpp  KernelLibrary.cpp  KernelLibrary.hpp  Log.cpp  Log.hpp  MaterialDesigner.cpp  MaterialDesigner.hpp  Time.cpp  Time.hpp  UUIDGenerator.cpp  UUIDGenerator.hpp
src/engine/matd/: Argument.hpp  Context.cpp  Context.hpp  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  Kernel.cpp  Kernel.hpp  Platform.cpp  Platform.hpp  Program.hpp  Queue.cpp  Queue.hpp  WorkItem.cpp  WorkItem.hpp
src/functions/core/: Argument.cpp  Argument.hpp  DataFunction.cpp  DataFunction.hpp  DataPrimitiveFunction.cpp  DataPrimitiveFunction.hpp  DataPrimitiveInput.cpp  DataPrimitiveInput.hpp  DataPrimitiveOutput.cpp  DataPrimitiveOutput.hpp  DataPrimitiveProcess.cpp  DataPrimitiveProcess.hpp  Function.cpp  Function.hpp  GraphNode.cpp  GraphNode.hpp  KernelFunction.cpp  KernelFunction.hpp  ShaderFunction.cpp  ShaderFunction.hpp  ShaderPrimitiveFunction.cpp  ShaderPrimitiveFunction.hpp  ShaderPrimitiveInput.cpp  ShaderPrimitiveInput.hpp  ShaderPrimitiveOutput.cpp  ShaderPrimitiveOutput.hpp  ShaderPrimitiveProcess.cpp  ShaderPrimitiveProcess.hpp
src/functions/data_graph/: AddNumber.cpp  AddNumber.hpp  BoolInput.cpp  BoolInput.hpp  BoolToNum1.cpp  BoolToNum1.hpp  BooleanInput.cpp  BooleanInput.hpp  Col1ToNum1.cpp  Col1ToNum1.hpp  Col3ToNum1.cpp  Col3ToNum1.hpp  Colorvec1Input.cpp  Colorvec1Input.hpp  Colorvec3Input.cpp  Colorvec3Input.hpp  DataGraphFunctions.hpp  DataGraphNode.cpp  DataGraphNode.hpp  DataRef.cpp  DataRef.hpp  DivideNumber.cpp  DivideNumber.hpp  Lut1Input.cpp  Lut1Input.hpp  Lut3Input.cpp  Lut3Input.hpp  MultiplyNumber.cpp  MultiplyNumber.hpp  Num1Input.cpp  Num1Input.hpp  Num1ToBool.cpp  Num1ToBool.hpp  Num1ToCol1.cpp  Num1ToCol1.hpp  Num1ToCol3.cpp  Num1ToCol3.hpp  Num1ToNum2.cpp  Num1ToNum2.hpp  Num2Input.cpp  (+27 more)
src/functions/shader_graph/: InputColor.cpp  InputColor.hpp  InputGrayscale.cpp  InputGrayscale.hpp  KernelInputColor.cpp  KernelInputColor.hpp  KernelInputGrayscale.cpp  KernelInputGrayscale.hpp  KernelOutputColor.cpp  KernelOutputColor.hpp  KernelOutputGrayscale.cpp  KernelOutputGrayscale.hpp  OutputColor.cpp  OutputColor.hpp  OutputGrayscale.cpp  OutputGrayscale.hpp  ShaderGraphFunctions.hpp  ShaderGraphNode.cpp  ShaderGraphNode.hpp  Viewer.cpp  Viewer.hpp
src/graphs/: Cache.cpp  Cache.hpp  Chache.cpp  DataCache.cpp  DataCache.hpp  DataGraph.cpp  DataGraph.hpp  DataNode.cpp  DataNode.hpp  Graph.cpp  Graph.hpp  JSONParser.cpp  JSONParser.hpp  KernelGraph.cpp  KernelGraph.hpp  MaterialGraph.cpp  MaterialGraph.hpp  MaterialProject.cpp  MaterialProject.hpp  Node.cpp  Node.hpp  NodeGraph.cpp  NodeGraph.hpp  NodeProject.cpp  NodeProject.hpp  ShaderCache.hpp  ShaderGraph.cpp  ShaderGraph.hpp  ShaderNode.cpp  ShaderNode.hpp
src/graphs/core/: ColorTexture.cpp  ColorTexture.hpp  Connection.cpp  Connection.hpp  Graph.cpp  Graph.hpp  GrayscaleTexture.cpp  GrayscaleTexture.hpp  InputSocket.cpp  InputSocket.hpp  MaterialGraph.cpp  MaterialGraph.hpp  MaterialProject.cpp  MaterialProject.hpp  Node.cpp  Node.hpp  OutputSocket.cpp  OutputSocket.hpp  Socket.cpp  Socket.hpp  Texture.hpp
src/graphs/data_graph/: DataCache.hpp  DataGraph.cpp  DataGraph.hpp  DataNode.cpp  DataNode.hpp
src/graphs/kernel_graph/: KernelGraph.cpp  KernelGraph.hpp
src/graphs/shader_graph/: ShaderCache.cpp  ShaderCache.hpp  ShaderGraph.cpp  ShaderGraph.hpp  ShaderInputSocket.cpp  ShaderInputSocket.hpp  ShaderNode.cpp  ShaderNode.hpp  ShaderOutputSocket.cpp  ShaderOutputSocket.hpp
src/types/matd/: Argument.cpp  Argument.hpp  Buffer.cpp  Buffer.hpp  ColorTexture.cpp  ColorTexture.hpp  Float.cpp  Float.hpp  GrayscaleTexture.cpp  GrayscaleTexture.hpp  Image.cpp  Image.hpp  Int.cpp  Int.hpp  MatColorVec3.cpp  MatColorVec3.hpp  MatNumber2.cpp  MatNumber2.hpp  MatdDataTypes.hpp  Struct.cpp  Struct.hpp  Texture.cpp  Texture.hpp
tests/: BufferTest.cpp  CMakeLists.txt  MainTest.cpp  TextureTest.cpp  VariablesTest.cpp  VectorTest.cpp
(+88 files in other folders)
